# fuckin-around

./: .gitignore  Cargo.toml  README.md
bootloader/: Cargo.toml
bootloader/.cargo/: config
bootloader/src/: main.rs  mm.rs  print.rs  pxe.rs  realmode.asm  realmode.rs  stage0.asm
etc/boot_kern_common/: Cargo.toml
etc/boot_kern_common/src/: lib.rs
etc/core_reqs/: Cargo.toml
etc/core_reqs/src/: lib.rs
etc/cpu/src/: lib.rs
etc/elf_parser/: Cargo.toml
etc/elf_parser/src/: lib.rs
etc/range_set/: Cargo.toml
etc/range_set/src/: lib.rs
etc/serial_driver/: Cargo.toml
etc/serial_driver/src/: lib.rs
etc/spinlock/: Cargo.toml
etc/spinlock/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/src/: main.rs
qemu/: ipxe.dsk  pypxe  qemu  virtio-net.dsk
src/: main.rs
