[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_reqs = { path = "../etc/core_reqs" }
cpu = { path = "../etc/cpu" }
serial_driver = { path = "../etc/serial_driver" }

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"

[profile.dev]
panic = "abort"
debug = true
