[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "../etc/cpu" }
core_reqs = { path = "../etc/core_reqs" }
range_set = { path = "../etc/range_set" }
serial_driver = { path = "../etc/serial_driver" }
boot_kern_common = { path = "../etc/boot_kern_common" }

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"

[profile.dev]
panic = "abort"
debug = true
